<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2" >

        <ImageButton
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="exportWorkout"
            android:contentDescription="@string/export_workout_btn"
            android:src="@drawable/strava" />

        <ImageButton
            android:id="@+id/image2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changePlannedRoute"
            android:contentDescription="@string/change_planned_route_btn"
            android:src="@drawable/ic_change_route" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2" >

        <ImageButton
            android:id="@+id/image3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="addRouteFromFile"
            android:contentDescription="@string/add_route_from_file_btn"
            android:src="@drawable/ic_add_route_from_file" />

        <ImageButton
            android:id="@+id/image4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="planNewWorkout"
            android:contentDescription="@string/plan_new_workout_btn"
            android:src="@drawable/ic_add_workout" />
    </LinearLayout>
</LinearLayout>